--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "files.associations": {
         "vector": "c",
-        "param.h": "c"
+        "param.h": "c",
+        "semaphore.h": "c",
+        "spinlock.h": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
